--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "repository": "https://github.com/cawfree/create-react-native-dapp",
   "license": "MIT",
   "author": "Alex Thomas (@cawfree) <hello@cawfree.com>",
-  "keywords": ["react", "react-native", "dapp", "ethereum", "web3", "starter", "react-native-web"],
+  "keywords": [
+    "react",
+    "react-native",
+    "dapp",
+    "ethereum",
+    "web3",
+    "starter",
+    "react-native-web"
+  ],
   "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
@@ -49,6 +57,7 @@
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/node": "^14.14.16",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
