--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native-web"
   ],
   "scripts": {
-    "build": "run-p build:*",
+    "build": "run-p build:* && sudo chmod +x build/main/index.js",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
