chore: migrate library to context structure in preparation for testing

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native-web"
   ],
   "scripts": {
-    "build": "run-p build:* && sudo chmod +x build/main/index.js",
+    "build": "run-p build:* && sudo chmod +x build/main/cli/index.js",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -49,7 +49,7 @@
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
   },
   "bin": {
-    "create-react-native-dapp": "./build/main/index.js"
+    "create-react-native-dapp": "./build/main/cli/index.js"
   },
   "engines": {
     "node": ">=10"
