--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "chalk": "^4.1.0",
+    "ethers": "^5.0.24",
     "flat": "^5.0.2",
     "prompts": "^2.4.0"
   },
