feat: app icon, linter settings, adb reverse, src -> frontend

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native-web"
   ],
   "scripts": {
-    "build": "run-p build:* && sudo chmod +x build/main/cli/index.js",
+    "build": "run-p build:* && cp -rf src/assets build/main/ && sudo chmod +x build/main/cli/index.js",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
