--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "create-react-native-dapp",
+  "name": "React-Native-Dapps",
   "version": "1.3.0",
   "private": false,
-  "description": "Your next Ethereum application starts here. ⚛️  💪 🦄",
+  "description": "Your next Ethereum application starts here.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/cawfree/create-react-native-dapp",
+  "repository": "https://github.com/Kavorix/React-Native-Dapps",
   "license": "MIT",
-  "author": "Alex Thomas (@cawfree) <hello@cawfree.com>",
+  "author": "kavorix",
   "contributors": [
     {
-      "name": "@cawfree",
-      "url": "https://github.com/cawfree"
+      "name": "kavorix",
+      "url": "https://github.com/kavorix"
     }
   ],
   "keywords": [
