--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "React-Native-Dapps",
   "version": "1.3.0",
   "private": false,
-  "description": "Your next Ethereum application starts here.",
+  "description": "React Native Dapps",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
